# standoff365-bb-notifier

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/s365watch/: __init__.py  __main__.py  client.py  config.py  models.py  monitor.py  notifier.py  state.py  telegram.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py  test_monitor.py  test_notifier.py  test_state.py  test_telegram.py
