[project]
name = "s365watch"
version = "0.1.0"
description = "Watch Standoff 365 Bug Bounty for newly published programs and notify a Telegram chat"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "st2l" }]
dependencies = [
    "httpx[socks]==0.28.1",
]

[project.scripts]
s365watch = "s365watch.__main__:main"

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-httpx==0.35.0",
    "ruff==0.13.1",
    "ty==0.0.1a16",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "s365watch"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "N", "RUF"]
# This project handles Russian-language program data and formats reward ranges
# with an en dash; the ambiguous-unicode rules fire on legitimate content.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
